# learn_d2_cdc

./: .gitignore  NOTES.md  README.md
docker/: Dockerfile  compose.yml  initdb.sh  run.sh
docker-debezium/: compose.yml  run.sh
examples/java/d2_camel_cdc/: DbzOrgUnitGroupsConnector.json  pom.xml
examples/java/d2_camel_cdc/src/main/java/com/example/demo/: Main.java
examples/java/d2_camel_cdc/src/main/java/com/example/demo/routes/: DebeziumPgRoute.java  KafkaDbzEnrichRoute.java  KafkaDbzRoute.java  PgReplicationSlotRoute.java
examples/java/d2_camel_cdc/src/main/java/com/example/demo/routes/sync/: DbzOrgUnitGroupsRoute.java  DbzOrgUnitRoute.java
examples/java/d2_camel_cdc/src/main/resources/: application.yml
examples/node/: index.js  package-lock.json  package.json
examples/python/: NOTES.md  pyproject.toml
examples/python/examples/: fa_sse_poll_changes.py  get_changes.py  get_changes_model.py  pg3_get_changes.py  pg3_poll_changes.py  poll_changes.py  poll_changes_with_ack.py
