[tool.poetry]
name = "python-d2-cdc"
version = "0.1.0"
description = ""
authors = ["Morten Hansen <morten@winterop.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.32"
pydantic = "^2.8.2"
psycopg2 = "^2.9.9"
psycopg = "^3.2.1"
fastapi = "^0.112.0"
uvicorn = "^0.30.6"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
# select = ["E", "F", "I"]
fixable = ["ALL"]
# exclude = [".git", ".mypy_cache", ".ruff_cache"]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true
docstring-code-line-length = "dynamic"
